# spectre

./: Cargo.toml  linux_spectroid.md
benches/: my_benchmark.rs
src/: fourier.rs  main.rs  resample.rs  resampler.rs  simd.rs
src/audio/: errors.rs  mod.rs
src/display/: cli.rs  gui.rs  mod.rs
src/display/gui/: core.rs  mod.rs  settings.rs  settings.wgsl  spectrogram.rs  spectrogram.wgsl  spectrum.rs  spectrum.wgsl
src/display/gui/spectrogram/: mod.rs  render.wgsl
src/display/gui/spectrogram/resampler/: downscale.wgsl  mod.rs  resample.wgsl  upscale.wgsl
src/display/gui/spectrum/: mod.rs  render.wgsl
src/math/: mod.rs  simd.rs
