[package]
name = "spectre"
description = "Real-time spectrum analyzer and spectrogram plotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.9"
jack = "0.8"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
realfft = "2.0"
rt-history = "1.0"
structopt = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[profile.bench]
opt-level = 3
debug = 2
codegen-units = 1
# Not currently beneficial to performance
# lto = "fat"
# panic = "abort"
