[package]
name = "spectre"
description = "Real-time spectrum analyzer and spectrogram plotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# To build only the CLI libs, pass --no-default-features --features cli to Cargo
default = ["gui"]
cli = ["crossterm"]
gui = ["pollster", "wgpu", "winit"]

[dependencies]
anyhow = "1.0"
crossterm = { version = "0.22", optional = true }
ctrlc = "3.2"
env_logger = "0.9"
jack = "0.8"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
pollster = { version = "0.2", optional = true }
realfft = "2.0"
rt-history = "1.0"
structopt = "0.3"
wgpu = { version = "0.12", optional = true }
winit = { version = "0.26", optional = true }

[dev-dependencies]
criterion = "0.3"
more-asserts = "0.2"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
# Brings extra perf at the cost of compile time
# codegen-units = 1

# Not currently beneficial to performance
# lto = "fat"
# panic = "abort"

[profile.bench]
debug = 2
